# knir-8

./: .gitignore  LICENSE  README.md  cut_phantom.py  pyproject.toml  test.py
cfg/: Base_Phantom_Descriptor.json  Base_Phantom_Descriptor_1.json  CatSim.cfg  Phantom_Descriptor.json  Phantom_Generation.json  Phantom_NS_Descriptor.json
cfg/cfg_0/: Phantom_Generation.json
cfg/cfg_0_1/: CatSim.cfg
cfg/cfg_1/: CatSim.cfg
cfg/cfg_1_1/: CatSim.cfg
cfg/cfg_2/: Phantom_Generation.json
cfg/cfg_4_1/: CatSim.cfg  Phantom_Generation.json
cfg/cfg_5_1/: CatSim.cfg  Phantom_Generation.json
checkpoints/: cnn_mo.pt  cnn_mo_best.pt
cho/: __init__.py  model.py
data_generation/: __main__.py  dro_generator.py  generate_data.py  utils.py
labeling/: __main__.py  labeling.py
model/: __init__.py  __main__.py  data_load.py  model.py
scripts/: cut_phantom.py  draw_etc.py  draw_losses.py  gen_multiple.ps1  make_diagrams.py  unpack_phantom.py
slides/: main.typ
test/: __main__.py  test.py  utils.py
